por final revicion